docs: update documentation

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -3,6 +3,13 @@
 :toc-title: Table of Contents
 :sectnums:
 
+[IMPORTANT]
+====
+This file is automatically maintained through the semantic release process.
+Do NOT manually edit this file. Changes are generated from conventional
+commit messages during the automated release process.
+====
+
 All notable changes to this project will be documented in this file.
 
 The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
