--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -14,6 +14,17 @@ Thank you for your interest in contributing to Bicep-Docs! This project welcomes
 . Open a pull request (PR) targeting the `main` branch.
 . Participate in the code review process and address any feedback.
 
+[IMPORTANT]
+====
+Do NOT manually edit the following files as they are automatically maintained:
+
+* `CHANGELOG.adoc` - Generated from conventional commits during release
+* Version numbers in `Cargo.toml` and `package.json` - Managed by semantic release
+* Git tags and GitHub releases - Created by automated CI/CD process
+
+All version management is handled through conventional commits and the semantic release process.
+====
+
 == Code Style and Standards
 
 * Follow Rust idioms and best practices.
@@ -24,7 +35,7 @@ Thank you for your interest in contributing to Bicep-Docs! This project welcomes
 
 == Pre-Commit Hooks
 
-This project uses https://pre-commit.com/[pre-commit] to automatically enforce code quality and conventional commits. 
+This project uses https://pre-commit.com/[pre-commit] to automatically enforce code quality and conventional commits.
 
 For detailed information about the pre-commit configuration, including installation instructions, available hooks, and troubleshooting, see the link:docs/PRE_COMMIT.adoc[Pre-Commit Configuration Guide].
 
@@ -67,6 +78,7 @@ BREAKING CHANGE: The --output flag has been renamed to --format
 * [ ] Commit messages follow Conventional Commits
 * [ ] Documentation is updated as needed
 * [ ] PR includes tests for new/changed behavior
+* [ ] No manual changes to CHANGELOG.adoc or version numbers
 
 == Reporting Issues
 
@@ -80,35 +92,6 @@ This project follows the Contributor Covenant Code of Conduct. Be respectful and
 
 If you have any questions, feel free to open an issue or start a discussion in the repository.
 
-== AST Export Tool
+== Development Tools
 
-The AST export tool (`export_ast`) allows you to export the Abstract Syntax Tree of a Bicep file in various formats with many options for filtering and analyzing the structure:
-
-[source,bash]
-----
-# Export AST to YAML (default)
-cargo run --bin export_ast -- path/to/your/bicep_file.bicep
-
-# Show only statistics about the AST
-cargo run --bin export_ast -- --stats path/to/your/bicep_file.bicep
-
-# Export AST to JSON
-cargo run --bin export_ast -- --format json path/to/your/bicep_file.bicep
-
-# Export a simplified tree format (more concise)
-cargo run --bin export_ast -- --format simpletree path/to/your/bicep_file.bicep
-
-# Filter by node type (e.g., only resource declarations)
-cargo run --bin export_ast -- --type-filter resource_declaration path/to/your/bicep_file.bicep
-
-# Show tree structure visualization
-cargo run --bin export_ast -- --structure path/to/your/bicep_file.bicep
-
-# Filter by line number
-cargo run --bin export_ast -- --line 10 path/to/your/bicep_file.bicep
-
-# Get help and examples
-cargo run --bin export_ast -- --help-examples
-cargo run --bin export_ast -- --help-node-types
-cargo run --bin export_ast -- --help-field-names
-----
+For advanced development and debugging, refer to the AST export tool documentation in the main README.
