--- a/docs/SEMANTIC_VERSIONING.adoc
+++ b/docs/SEMANTIC_VERSIONING.adoc
@@ -3,6 +3,13 @@
 :toc-title: Table of Contents
 :sectnums:
 
+[IMPORTANT]
+====
+Version numbers in `Cargo.toml`, `package.json`, and `CHANGELOG.adoc` are automatically
+managed by the semantic release process. Do NOT manually edit these files. All version
+management is handled through conventional commits and automated CI/CD processes.
+====
+
 This project uses https://github.com/semantic-release/semantic-release[semantic-release] with the https://github.com/semantic-release-cargo/semantic-release-cargo[semantic-release-cargo] plugin to automate version management and releases.
 
 == Commit Message Format
@@ -95,7 +102,7 @@ You can also trigger a manual release by:
 
 * `.releaserc.js`: Main semantic-release configuration
 * `package.json`: Node.js dependencies and release configuration
-* `commitlint.config.js`: Commit message linting rules
+* `.commitlintrc.js`: Commit message linting rules
 * `.github/workflows/release.yml`: Release automation workflow
 * `.github/workflows/ci.yml`: Continuous integration workflow
 
@@ -103,7 +110,8 @@ You can also trigger a manual release by:
 
 === For Contributors
 
-No special setup required. Just follow the commit message format.
+No special setup required. Just follow the commit message format and do NOT manually
+modify version numbers or the changelog - these are automatically managed.
 
 === For Maintainers
 
